--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "react-webcam",
-  "version": "0.2.0",
+  "name": "@digix/react-webcam",
+  "version": "0.2.1",
   "description": "React webcam component",
-  "main": "dist/react-webcam.js",
+  "main": "src/react-webcam.js",
   "scripts": {
-    "prepublish": "npm run build:umd",
-    "build": "webpack src/react-webcam.js dist/react-webcam.js",
-    "build:umd": "npm run build && NODE_ENV=production webpack src/react-webcam.js dist/react-webcam.min.js",
     "lint": "eslint src"
   },
   "repository": {
